--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LibreChat Admin Panel</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2">
+    <!-- Favicon with aggressive cache busting -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=3">
+    <link rel="apple-touch-icon" href="/favicon.ico?v=3">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
