--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LibreChat Admin Panel</title>
-    <!-- Favicon with aggressive cache busting -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=3">
-    <link rel="apple-touch-icon" href="/favicon.ico?v=3">
+    <!-- Multiple favicon formats for better browser compatibility -->
+    <link rel="icon" href="/favicon.ico?v=4">
+    <link rel="shortcut icon" href="/favicon.ico?v=4">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=4">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico?v=4">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=4">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
