--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico?v=4">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=4">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/balance-modals.css">
 </head>
 <body>
     <!-- Login Screen -->
@@ -146,6 +147,7 @@
     </div>
 
     <script src="/js/app.js"></script>
+    <script src="/js/balance-modals.js"></script>
 </body>
 </html>
 
